load("@io_bazel_rules_sass//:defs.bzl", "multi_sass_binary", "sass_library")
load("@npm//@bazel/typescript:index.bzl", "ts_config")
load("//tools/bazel_rules:index.bzl", "jest", "ng_module_view_engine", "stylelint")

package(default_visibility = ["//visibility:public"])

ng_module_view_engine(
    name = "compile",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = [
            "**/*.spec.ts",
            "src/test-setup.ts",
        ],
    ),
    angular_assets = [
        ":styles",
        ":src/confirmation-dialog.html",
        ":src/confirmation-dialog-state/confirmation-dialog-state.html",
    ],
    module_name = "@dynatrace/barista-components/confirmation-dialog",
    tsconfig = "tsconfig_lib",
    deps = [
        "//libs/barista-components/core:compile",
        "//libs/barista-components/icon:compile",
        "//libs/barista-components/theming:compile",
        "@npm//@angular/animations",
        "@npm//@angular/cdk",
        "@npm//@angular/core",
        "@npm//@angular/common",
        "@npm//rxjs",
    ],
)

multi_sass_binary(
    name = "styles",
    srcs = [
        "src/confirmation-dialog.scss",
        "src/confirmation-dialog-state/confirmation-dialog-state.scss"
    ]
)

filegroup(
    name = "confirmation-dialog",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = [
            "**/*.spec.ts",
            "src/test-setup.ts",
        ],
    ) + glob([
        "**/*.html",
        "**/*.scss",
    ]),
)

stylelint(
    name = "stylelint",
    srcs = glob(["**/*.scss"]),
)

jest(
    name = "test",
    srcs = glob(include = ["**/*.spec.ts"]),
    jest_config = ":jest.config.json",
    setup_file = ":src/test-setup.ts",
    ts_config = ":tsconfig_test",
    deps = [
        ":compile",
        "//libs/barista-components/core:compile",
        "//libs/barista-components/icon:compile",
        "//libs/barista-components/theming:compile",
        "//libs/testing/browser",
        "@npm//@angular/animations",
        "@npm//@angular/cdk",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//rxjs",
    ],
)

ts_config(
    name = "tsconfig_lib",
    src = "tsconfig.lib.json",
    deps = [
        "tsconfig.json",
        "//libs/barista-components:tsconfig",
    ],
)

ts_config(
    name = "tsconfig_test",
    src = "tsconfig.spec.json",
    deps = [
        "tsconfig.json",
        "//libs/barista-components:tsconfig",
    ],
)
