load("@io_bazel_rules_sass//:defs.bzl", "multi_sass_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_config")
load("//tools/bazel_rules:index.bzl", "ng_module_view_engine", "stylelint")

package(default_visibility = ["//visibility:public"])

ng_module_view_engine(
    name = "compile",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = [
            "**/*.spec.ts",
            "src/test-setup.ts",
        ],
    ),
    angular_assets = [
        ":styles",
        ":src/confirmation-dialog.html",
        ":src/confirmation-dialog-state/confirmation-dialog-state.html",
    ],
    module_name = "@dynatrace/barista-components/confirmation-dialog",
    tsconfig = "tsconfig_lib",
    deps = [
        "//libs/barista-components/core:compile",
        "//libs/barista-components/icon:compile",
        "//libs/barista-components/theming:compile",
        "@npm//@angular/animations",
        "@npm//@angular/cdk",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//rxjs",
    ],
)

multi_sass_binary(
    name = "styles",
    srcs = [
        "src/confirmation-dialog.scss",
        "src/confirmation-dialog-state/confirmation-dialog-state.scss",
    ],
)

filegroup(
    name = "confirmation-dialog",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = [
            "**/*.spec.ts",
            "src/test-setup.ts",
        ],
    ) + glob([
        "**/*.html",
        "**/*.scss",
    ]),
)

stylelint(
    name = "stylelint",
    srcs = glob(["**/*.scss"]),
)

ts_config(
    name = "tsconfig_lib",
    src = "tsconfig.lib.json",
    deps = [
        "tsconfig.json",
        "//libs/barista-components:tsconfig",
    ],
)
