load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_config")
load("//tools/bazel_rules:index.bzl", "ng_module_view_engine", "stylelint")

package(default_visibility = ["//visibility:public"])

ng_module_view_engine(
    name = "compile",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = [
            "**/*.spec.ts",
            "src/test-setup.ts",
        ],
    ),
    angular_assets = [
        ":styles",
        ":styles_header",
        ":styles_footer",
        ":src/context-dialog.html",
        ":src/header/context-dialog-header.html",
        ":src/footer/context-dialog-footer.html",
    ],
    module_name = "@dynatrace/barista-components/context-dialog",
    tsconfig = "tsconfig_lib",
    deps = [
        "//libs/barista-components/button:compile",
        "//libs/barista-components/core:compile",
        "//libs/barista-components/icon:compile",
        "//libs/barista-components/theming:compile",
        "@npm//@angular/cdk",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//rxjs",
    ],
)

filegroup(
    name = "context-dialog",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = [
            "**/*.spec.ts",
            "src/test-setup.ts",
        ],
    ) + glob([
        "**/*.html",
        "**/*.scss",
    ]),
)

sass_binary(
    name = "styles",
    src = "src/context-dialog.scss",
)

sass_binary(
    name = "styles_header",
    src = "src/header/context-dialog-header.scss",
)

sass_binary(
    name = "styles_footer",
    src = "src/footer/context-dialog-footer.scss",
)

stylelint(
    name = "stylelint",
    srcs = glob(["**/*.scss"]),
)

ts_config(
    name = "tsconfig_lib",
    src = "tsconfig.lib.json",
    deps = [
        "tsconfig.json",
        "//libs/barista-components:tsconfig",
    ],
)
