load("@npm_bazel_typescript//:index.bzl", "ts_config", "ts_library")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary", "sass_library")
load("//tools:index.bzl", "ng_module",  "ng_sub_package")

package(default_visibility = ["//visibility:public"])

ng_sub_package(
    name = "core",
    entry_point = ":index.ts",
    deps = [
      ":core_compile"
    ],
    globals = {
        "@angular/cdk/coercion": "ng.cdk.coercion",
        "rxjs": "rxjs"
    }
)

ng_module(
    name = "core_compile",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = [
            "**/*.spec.ts",
            "src/test-setup.ts",
        ],
    ),
    angular_assets = [
        ":src/option/option.css",
        ":src/option/optgroup.css",
    ] + glob(["src/**/*.html"]),
    data = [
        ":package.json",
    ],
    module_name = "@dynatrace/barista-components/core",
    tsconfig = "tsconfig_lib",
    deps = [
        "@npm//@angular/animations",
        "@npm//@angular/cdk",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/platform-browser",
        "@npm//rxjs",
    ],
)

sass_library(
    name = "core_scss_lib",
    srcs = glob(
        ["src/**/_*.scss"],
    ),
)

sass_binary(
    name = "option_scss",
    src = "src/option/option.scss",
    deps = [":core_scss_lib"],
)

sass_binary(
    name = "optgroup_scss",
    src = "src/option/optgroup.scss",
    deps = [":core_scss_lib"],
)

ts_config(
    name = "tsconfig_lib",
    src = "tsconfig.lib.json",
    deps = [
        "tsconfig.json",
        "//:tsconfig.json",
    ],
)

filegroup(
    name = "source_files",
    srcs = glob(["**/*.ts"]),
    data = [
        ":package.json",
    ],
)
