load("@io_bazel_rules_sass//:defs.bzl", "sass_binary", "sass_library")
load("@npm//@bazel/typescript:index.bzl", "ts_config")
load("//tools/bazel_rules:index.bzl", "ng_module_view_engine", "stylelint")

package(default_visibility = ["//visibility:public"])

ng_module_view_engine(
    name = "compile",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = [
            "**/*.spec.ts",
            "src/test-setup.ts",
        ],
    ),
    angular_assets = [
        ":option_scss",
        ":optgroup_scss",
    ] + glob(["src/**/*.html"]),
    module_name = "@dynatrace/barista-components/core",
    tsconfig = "tsconfig_lib",
    deps = [
        "@npm//@angular/animations",
        "@npm//@angular/cdk",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/platform-browser",
        "@npm//rxjs",
    ],
)

filegroup(
    name = "core",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = [
            "**/*.spec.ts",
            "src/test-setup.ts",
        ],
    ) + [
        ":scss_lib",
    ] + glob([
        "**/*.html",
        "**/*.scss",
    ]),
)

sass_library(
    name = "scss_lib",
    srcs = glob(
        ["src/**/_*.scss"],
    ),
)

sass_binary(
    name = "option_scss",
    src = "src/option/option.scss",
    deps = [":scss_lib"],
)

sass_binary(
    name = "optgroup_scss",
    src = "src/option/optgroup.scss",
    deps = [":scss_lib"],
)

stylelint(
    name = "stylelint",
    srcs = glob(["**/*.scss"]),
)

ts_config(
    name = "tsconfig_lib",
    src = "tsconfig.lib.json",
    deps = [
        "tsconfig.json",
        "//libs/barista-components:tsconfig",
    ],
)
