load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_config")
load("//tools/bazel_rules:index.bzl", "ng_module_view_engine", "stylelint")

package(default_visibility = ["//visibility:public"])

ng_module_view_engine(
    name = "compile",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = [
            "**/*.spec.ts",
            "src/test-setup.ts",
        ],
    ),
    angular_assets = [
        ":styles",
        ":styles_item",
        "src/empty-state-item.html",
    ],
    module_name = "@dynatrace/barista-components/empty-state",
    tsconfig = "tsconfig_lib",
    deps = [
        "//libs/barista-components/core:compile",
        "//libs/barista-components/icon:compile",
        "@npm//@angular/animations",
        "@npm//@angular/cdk",
        "@npm//@angular/core",
        "@npm//rxjs",
    ],
)

filegroup(
    name = "empty-state",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = [
            "**/*.spec.ts",
            "src/test-setup.ts",
        ],
    ) + glob([
        "**/*.html",
        "**/*.scss",
    ]),
)

sass_binary(
    name = "styles",
    src = "src/empty-state.scss",
)

sass_binary(
    name = "styles_item",
    src = "src/empty-state-item.scss",
)

stylelint(
    name = "stylelint",
    srcs = glob(["**/*.scss"]),
)

ts_config(
    name = "tsconfig_lib",
    src = "tsconfig.lib.json",
    deps = [
        "tsconfig.json",
        "//libs/barista-components:tsconfig",
    ],
)
