load("@io_bazel_rules_sass//:defs.bzl", "sass_binary", "sass_library")
load("@npm//@bazel/typescript:index.bzl", "ts_config")
load("//tools/bazel_rules:index.bzl", "jest", "ng_module_view_engine", "stylelint")

package(default_visibility = ["//visibility:public"])

ng_module_view_engine(
    name = "compile",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = [
            "**/*.spec.ts",
            "src/test-setup.ts",
        ],
    ),
    angular_assets = [
        ":styles",
        ":styles_legend",
        "src/event-chart-legend.html",
        "src/event-chart.html",
    ],
    module_name = "@dynatrace/barista-components/event-chart",
    tsconfig = "tsconfig_lib",
    deps = [
        "//libs/barista-components/core:compile",
        "//libs/barista-components/formatters:compile",
        "//libs/barista-components/legend:compile",
        "//libs/barista-components/overlay:compile",
        "@npm//@angular/core",
        "@npm//@angular/cdk",
        "@npm//@angular/common",
        "@npm//rxjs",
        "@npm//@types/d3-scale",
        "@npm//d3-scale",
    ],
)

filegroup(
    name = "event-chart",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = [
            "**/*.spec.ts",
            "src/test-setup.ts",
        ],
    ) + glob([
        "**/*.html",
        "**/*.scss",
    ]),
)

sass_binary(
    name = "styles",
    src = "src/event-chart.scss",
    deps = ["styles_lib_constants"]
)

sass_binary(
    name = "styles_legend",
    src = "src/event-chart-legend.scss",
    deps = ["styles_lib_constants"]
)

sass_library(
    name = "styles_lib_constants",
    srcs = ["src/_event-chart-constants.scss"],
)

stylelint(
    name = "stylelint",
    srcs = glob(["**/*.scss"]),
)

jest(
    name = "test",
    srcs = glob(include = ["**/*.spec.ts"]),
    jest_config = ":jest.config.json",
    setup_file = ":src/test-setup.ts",
    ts_config = ":tsconfig_test",
    deps = [
        ":compile",
        "//libs/testing/browser",
        "@npm//@angular/platform-browser",
        "//libs/barista-components/core:compile",
        "//libs/barista-components/formatters:compile",
        "//libs/barista-components/legend:compile",
        "//libs/barista-components/overlay:compile",
        "@npm//@angular/core",
        "@npm//@angular/cdk",
        "@npm//@angular/common",
        "@npm//rxjs",
        "@npm//@types/d3-scale",
        "@npm//d3-scale",
    ],
)

ts_config(
    name = "tsconfig_lib",
    src = "tsconfig.lib.json",
    deps = [
        "tsconfig.json",
        "//libs/barista-components:tsconfig",
    ],
)

ts_config(
    name = "tsconfig_test",
    src = "tsconfig.spec.json",
    deps = [
        "tsconfig.json",
        "//libs/barista-components:tsconfig",
    ],
)
